bin/testsuite/tests/compiler/src/errors/compiler1939.swg
//#global testerror "Err0232"
struct B
{
    xxx: s32
}

impl B
{
    func toto(me)
    {
        var xxx = 0
    }
}
